; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/virtio/block/extr_virtio_blk.c_vtblk_dump_complete.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/virtio/block/extr_virtio_blk.c_vtblk_dump_complete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vtblk_softc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vtblk_softc*)* @vtblk_dump_complete to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vtblk_dump_complete(%struct.vtblk_softc* %0) #0 {
  %2 = alloca %struct.vtblk_softc*, align 8
  store %struct.vtblk_softc* %0, %struct.vtblk_softc** %2, align 8
  %3 = load %struct.vtblk_softc*, %struct.vtblk_softc** %2, align 8
  %4 = call i32 @vtblk_dump_flush(%struct.vtblk_softc* %3)
  %5 = load %struct.vtblk_softc*, %struct.vtblk_softc** %2, align 8
  %6 = call i32 @VTBLK_UNLOCK(%struct.vtblk_softc* %5)
  %7 = load %struct.vtblk_softc*, %struct.vtblk_softc** %2, align 8
  %8 = load %struct.vtblk_softc*, %struct.vtblk_softc** %2, align 8
  %9 = getelementptr inbounds %struct.vtblk_softc, %struct.vtblk_softc* %8, i32 0, i32 0
  %10 = call i32 @vtblk_done_completed(%struct.vtblk_softc* %7, i32* %9)
  %11 = load %struct.vtblk_softc*, %struct.vtblk_softc** %2, align 8
  %12 = call i32 @VTBLK_LOCK(%struct.vtblk_softc* %11)
  ret void
}

declare dso_local i32 @vtblk_dump_flush(%struct.vtblk_softc*) #1

declare dso_local i32 @VTBLK_UNLOCK(%struct.vtblk_softc*) #1

declare dso_local i32 @vtblk_done_completed(%struct.vtblk_softc*, i32*) #1

declare dso_local i32 @VTBLK_LOCK(%struct.vtblk_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
